--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="transactions">
-        <a href="#">+ Nova Transação</a>
+        <a class="new-transaction" href="#">+ Nova Transação</a>
         <table>
             <thead>
                 <tr>
@@ -76,23 +76,26 @@
         <p>Finance Control $$$</p>
     </footer>
 
-    <div class="modal-overlay active">
+    <div class="modal-overlay">
         <div class="modal">
             <div class="modal-content">
                 <h3>Nova Transação</h3>
                 <form action="">
                     <input type="text" name="description" id="description" placeholder="Descrição">
-                    <input type="number" name="value" id="value" placeholder="0,00">
+                    <input type="number" name="value" id="value" placeholder="0,00" step="0.01">
                     <span>Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais</span>
                     <input type="date" name="date" id="date">
                     <div class="button-actions">
-                        <button id="cancel">Cancelar</button>
-                        <button id="save">Salvar</button>
+                        <a href="#" id="cancel">Cancelar</a>
+                        <button type="submit" id="save">Salvar</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+
+    <script src="./scripts/modal.js"></script>
+
 </body>
 
 </html>
