--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <span>Use o sinal - (negativo) para despesas</span>
                     <input type="date" name="date" id="date">
                     <div class="button-actions">
-                        <a href="#" id="cancel">Cancelar</a>
+                        <a href="#" id="cancel" onclick="Modal.closeModal()">Cancelar</a>
                         <button type="submit" id="save">Salvar</button>
                     </div>
                 </form>
